--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^0.1.1",
+    "@radix-ui/react-id": "^0.1.1",
     "@stitches/react": "^1.2.5",
     "next": "12.0.2",
     "react": "17.0.2",
