--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^0.1.1",
+    "@radix-ui/react-dropdown-menu": "^0.1.1",
     "@radix-ui/react-id": "^0.1.1",
+    "@splidejs/react-splide": "^0.6.9",
     "@stitches/react": "^1.2.5",
     "next": "12.0.2",
     "react": "17.0.2",
