--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@stitches/react": "1.2.6",
     "apollo-upload-client": "17.0.0",
     "graphql": "16.1.0",
-    "next": "12.0.7",
+    "next": "12.0.8-canary.13",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sharp": "0.29.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.3.0",
@@ -28,7 +29,7 @@
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
+    "eslint-config-next": "12.0.8-canary.13",
     "eslint-config-prettier": "8.3.0",
     "prettier": "2.5.1",
     "typescript": "4.4.4"
