--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-id": "^0.1.1",
     "@splidejs/react-splide": "0.6.17",
     "@stitches/react": "1.2.6",
+    "ahooks": "^3.3.0",
     "apollo-upload-client": "17.0.0",
     "graphql": "16.1.0",
     "next": "12.0.8-canary.13",
