--- a/package.json
+++ b/package.json
@@ -2,31 +2,25 @@
   "name": "chenzaozhao",
   "private": true,
   "scripts": {
-    "gen": "graphql-codegen",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next dev",
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "3.5.6",
-    "@radix-ui/react-dialog": "^0.1.1",
-    "@radix-ui/react-dropdown-menu": "^0.1.1",
-    "@radix-ui/react-id": "^0.1.1",
+    "@radix-ui/react-dialog": "1.0.0",
+    "@radix-ui/react-dropdown-menu": "1.0.0",
+    "@radix-ui/react-id": "1.0.0",
     "@splidejs/react-splide": "0.6.17",
     "@stitches/react": "1.2.6",
     "ahooks": "^3.3.0",
-    "apollo-upload-client": "17.0.0",
-    "graphql": "16.1.0",
+    "formdata-node": "^4.3.3",
+    "moment": "^2.29.4",
     "next": "12.0.8-canary.13",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sharp": "0.29.3"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.3.0",
-    "@graphql-codegen/typescript-operations": "2.2.1",
-    "@graphql-codegen/typescript-react-apollo": "3.2.2",
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
     "eslint": "8.4.1",
